# b3_django

./: .gitignore  README.md  codebase_structure_and_contents.txt  manage.py  prompt.py  pyproject.toml  requirements.txt
assets/: __init__.py  admin.py  apps.py  forms.py  models.py  price_fetcher.py  signals.py  tasks.py  urls.py  views.py
assets/data/: b3_tickers.csv
assets/management/commands/: populate_available_assets.py
assets/migrations/: 0001_initial.py
b3_monitor/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
b3_monitor/static/css/: base.css  components.css  main.css  pages.css  utilities.css
b3_monitor/templates/: base.html  landing_page.html
b3_monitor/templates/assets/: asset_confirm_delete.html  asset_create.html  asset_detail.html  asset_list.html
b3_monitor/templates/registration/: login.html  profile.html  signup.html
